samples/_failures_safe/1761040015_041c5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a088b306.c: In function ‘process_text’:
./samples/SAFE/__tmp_a088b306.c:141:5: error: expected expression at end of input
  141 |     processed[
      |     ^~~~~~~~~
./samples/SAFE/__tmp_a088b306.c:141:5: error: expected declaration or statement at end of input
